# ProxyBeast-v2

./: .gitattributes  README.md  TODOS.md  components.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: linter.yml  ls-open-prs.yml  pr-preview-commits.yml
.zed/: settings.json
src/: App.css  App.tsx  layout.tsx  main.tsx  root.tsx  screen.context.ts  screens.tsx
src-tauri/: 2  Cargo.toml  config.json  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
src/@types/: app.d.ts
src/components/: app.tsx  bootstrap.tsx  credits.tsx  settings.tsx  uri-tooltip.tsx
src/hooks/: useLoad.ts
